# MyOS

./: CMakeLists.txt  linker.ld
include/: graphics.h  terminal.h
src/: boot.s  graphics.c  kernel.c  terminal.c
